--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -10,6 +10,8 @@
    <link href="https://fonts.googleapis.com/css2?family=Archivo:wght@400;700&display=swap" rel="stylesheet" />
  
    <link rel="shortcut icon" th:href="@{images/favicon.ico}" type="image/x-icon" />
+   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.15.4/css/all.css"
+         integrity="sha384-DyZ88mC6Up2uqS4h/KRgHuoeGwBcD4Ng9SiP4dIRy0EXTlnuz47vAwmeGwVChigm" crossorigin="anonymous">
  
  
    <!-- Carousel -->
@@ -184,8 +186,11 @@
                   </span>
                </div>
             </div>
-            <div class="container" data-aos="fade-up" data-aos-duration="1200">
+            <div class="container" data-aos="fade-up" data-aos-duration="1200" >
                <div class="glide" id="glide_2">
+
+
+
                   <div class="glide__track" data-glide-el="track">
                      <ul class="glide__slides latest-center" th:each="phone : ${phones}">
                         <li class="glide__slide">
@@ -217,34 +222,37 @@
                               </div>
                               <a href="#"><button type="submit" class="product__btn">Thêm vào giỏ hàng</button></a>
                            </div>
-                           <ul>
-                              <li>
-                                 <a data-tip="Quick View" data-place="left" href="#">
-                                 <svg>
-                                    <use xlink:href="./images/sprite.svg#icon-eye"></use>
-                                 </svg>
-                                 </a>
-                              </li>
-                              <li>
-                                 <a data-tip="Add To Wishlist" data-place="left" href="#">
-                                 <svg>
-                                    <use xlink:href="./images/sprite.svg#icon-heart-o"></use>
-                                 </svg>
-                                 </a>
-                              </li>
-                              <li>
-                                 <a data-tip="Add To Compare" data-place="left" href="#">
-                                 <svg>
-                                    <use xlink:href="./images/sprite.svg#icon-loop2"></use>
-                                 </svg>
-                                 </a>
-                              </li>
-                           </ul>
+<!--                           <ul>-->
+<!--                              <li>-->
+<!--                                 <a data-tip="Quick View" data-place="left" href="#">-->
+<!--                                 <svg>-->
+<!--                                    <use xlink:href="./images/sprite.svg#icon-eye"></use>-->
+<!--                                 </svg>-->
+<!--                                 </a>-->
+<!--                              </li>-->
+<!--                              <li>-->
+<!--                                 <a data-tip="Add To Wishlist" data-place="left" href="#">-->
+<!--                                 <svg>-->
+<!--                                    <use xlink:href="./images/sprite.svg#icon-heart-o"></use>-->
+<!--                                 </svg>-->
+<!--                                 </a>-->
+<!--                              </li>-->
+<!--                              <li>-->
+<!--                                 <a data-tip="Add To Compare" data-place="left" href="#">-->
+<!--                                 <svg>-->
+<!--                                    <use xlink:href="./images/sprite.svg#icon-loop2"></use>-->
+<!--                                 </svg>-->
+<!--                                 </a>-->
+<!--                              </li>-->
+<!--                           </ul>-->
                            </div>
                         </li>
 
                      </ul>
                   </div>
+
+
+
                   <div class="glide__arrows" data-glide-el="controls">
                      <button class="glide__arrow glide__arrow--left" data-glide-dir="<">
                         <svg>
@@ -266,27 +274,27 @@
             <div class="title__container tabs">
                <div class="section__titles category__titles ">
                   <div class="section__title filter-btn active" data-id="All Products">
-                  <span class="dot"></span>
+                  <span class=""><i class="fas fa-border-all"></i></span>
                   <h1 class="primary__title">Tất Cả</h1>
                   </div>
                </div>
                <div class="section__titles">
                   <div class="section__title filter-btn" data-id="Trending Products">
-                  <span class="dot"></span>
+                  <span class=""><i class="fas fa-arrow-up"></i></span>
                   <h1 class="primary__title">Xu Hướng</h1>
                   </div>
                </div>
    
                <div class="section__titles">
                   <div class="section__title filter-btn" data-id="Special Products">
-                  <span class="dot"></span>
+                  <span><i class="fab fa-angular"></i></span>
                   <h1 class="primary__title">Đặc Biệt</h1>
                   </div>
                </div>
    
                <div class="section__titles">
                   <div class="section__title filter-btn" data-id="Featured Products">
-                  <span class="dot"></span>
+                  <span class=""><i class="fab fa-angellist"></i></span>
                   <h1 class="primary__title">Đặc Trưng</h1>
                   </div>
                </div>
@@ -435,7 +443,7 @@
             <div class="title__container">
                <div class="section__titles">
                   <div class="section__title active">
-                     <span class="dot"></span>
+                     <span class=""><i class="fas fa-newspaper"></i></span>
                      <h1 class="primary__title">Tin Tức Điện Thoại</h1>
                   </div>
                </div>
@@ -647,8 +655,8 @@
    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
 
    <!-- Javascript files -->
-   <script th:src="@{app/index.js}"></script>
-   <script th:src="@{app/slider.js}"></script>
-   <script th:src="@{app/products.js}"></script>
+   <script th:src="@{js/index.js}"></script>
+   <script th:src="@{js/slider.js}"></script>
+   <script th:src="@{js/products.js}"></script>
 </body>
 </html>
