--- a/src/main/resources/templates/Add.html
+++ b/src/main/resources/templates/Add.html
@@ -12,8 +12,8 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/css/bootstrap.min.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.12.4/jquery.min.js"></script>
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.7/js/bootstrap.min.js"></script>
-    <link th:href="@{css/manager.css}" rel="stylesheet" type="text/css"/>
-    <link th:href="@{css/style.css}" rel="stylesheet" type="text/css">
+    <link th:href="@{/css/manager.css}" rel="stylesheet" type="text/css"/>
+    <link th:href="@{/css/style.css}" rel="stylesheet" type="text/css">
 
     <style>
         img{
@@ -40,7 +40,7 @@
     <div id="editEmployeeModal">
         <div class="modal-dialog">
             <div class="modal-content">
-                <form action="" method="post" object="">
+                <form action="" method="post" object="" id="addForm">
                     <div class="modal-header">
                         <h4 class="modal-title">Add Product</h4>
                         <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><a href="/admin/manager-product/1?sortField=id&sortDir=asc">&times;</a></button>
@@ -49,28 +49,29 @@
 
                         <div class="form-group">
                             <label>Name</label>
-                            <input  name="name" type="text" class="form-control" required>
+                            <input  name="name" type="text" class="form-control" required id="name">
                         </div>
                         <div class="form-group">
                             <label>Image</label>
-                            <input  name="image" type="text" class="form-control" required>
+                            <input  name="image" type="text" class="form-control" required id="image">
                         </div>
                         <div class="form-group">
                             <label>Price</label>
-                            <input  name="price" type="text" class="form-control" required>
+                            <input  name="price" type="text" class="form-control" required id="price">
                         </div>
                         <div class="form-group">
                             <label>Quantity</label>
-                            <input  name="quantity" type="text" class="form-control" required>
+                            <input  name="quantity" type="text" class="form-control" required id="quantity">
                         </div>
                         <div class="form-group">
                             <label>Introduction</label>
-                            <textarea name="introduction" class="form-control" required></textarea>
+                            <textarea name="introduction" class="form-control" required id="introduction"></textarea>
                         </div>
                         <div class="form-group">
                             <label>Category</label>
-                            <select name="category" class="form-select" aria-label="Default select example">
-                                <option each="" text="" value=""></option>
+                            <select name="category" class="form-select" aria-label="Default select example" id="category">
+                                <option th:each="category : ${categories}" th:text="${category.name}"
+                                        th:value="${category.id}" ></option>
                             </select>
                         </div>
 
@@ -86,6 +87,6 @@
 </div>
 
 
-<script th:src="@{js/manager.js}" type="text/javascript"></script>
+<script th:src="@{/js/manager.js}" type="text/javascript"></script>
 </body>
 </html>
