ta update code for add, update, delete phone

--- a/src/main/resources/templates/Add.html
+++ b/src/main/resources/templates/Add.html
@@ -38,6 +38,10 @@
         </div>
     </div>
 
+    <div th:if="${alert != null}" class="alert alert-success" role="alert" style="text-align: center">
+        <b th:utext="${alert}"></b>
+    </div>
+
     <div id="editEmployeeModal">
         <div class="modal-dialog">
             <div class="modal-content">
