--- a/src/main/resources/templates/ManagerProduct.html
+++ b/src/main/resources/templates/ManagerProduct.html
@@ -23,8 +23,8 @@
 <body>
 
 <div class="container">
-    <!-- admin nav   -->
-<!--    <div th:insert="~{AdminNavbar.html}"></div>-->
+<!--     admin nav-->
+    <div th:insert="~{AdminNavbar.html}"></div>
 
     <div class="table-wrapper">
         <div class="table-title">
