--- a/src/main/resources/templates/Add.html
+++ b/src/main/resources/templates/Add.html
@@ -24,8 +24,8 @@
 <body>
 <div class="container">
     <!-- admin nav   -->
-<!--    <div th:insert="~{AdminNavbar.html}"></div>-->
-    <!--    -->
+    <div th:insert="~{AdminNavbar.html}"></div>
+
     <div class="table-wrapper">
         <div class="table-title">
             <div class="row">
@@ -48,7 +48,7 @@
                 <form th:action="@{/save-phone}" method="post" th:object="${phone}" id="addForm">
                     <div class="modal-header">
                         <h4 class="modal-title">Add Product</h4>
-                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><a href="/admin/manager-product/1?sortField=id&sortDir=asc">&times;</a></button>
+                        <button type="button" class="close" data-dismiss="modal" aria-hidden="true"><a href="/manage-phone/1?sortField=id&sortDir=asc">&times;</a></button>
                     </div>
                     <div class="modal-body">
                         <div class="form-group">
@@ -121,7 +121,7 @@
 
                     </div>
                     <div class="modal-footer">
-                        <a href="/manage-phone">
+                        <a href="/manage-phone/1?sortField=id&sortDir=asc">
                             <button type="button" class="btn btn-primary">Cancel</button>
                         </a>
                         <input type="submit" class="btn btn-success" value="Add">
