--- a/src/main/resources/templates/index2.html
+++ b/src/main/resources/templates/index2.html
@@ -274,6 +274,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<script type="text/javascript" src="js/jquery.flexisel.js"></script>
 
 		</div>
+        <div class="banner-big">
+
+        </div>
 
 
 	</div>
@@ -282,33 +285,12 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!--content-->
 	<div class="content">
 		<div class="content-head">
-			<div class="col-md-6 col-m1 animated wow fadeInLeft" data-wow-delay=".1s">
-				<div class="col-1">
-					<div class="col-md-6 col-2">
-						<a href="single.html"><img src="images/pi3.jpg" class="img-responsive" alt="">
-						</a>
-					</div>
-					<div class="col-md-6 col-p">
-						<h5>For All Collections</h5>
-						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-							praesentium voluptatum deleniti atque</p>
-						<a href="single.html" class="shop" data-hover="Shop Now">Shop Now</a>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
-				<div class="col-1">
-					<div class="col-md-6 col-p">
-						<h5>For All Collections</h5>
-						<p>At vero eos et accusamus et iusto odio dignissimos ducimus qui blanditiis
-							praesentium voluptatum deleniti atque</p>
-						<a href="single.html" class="shop" data-hover="Shop Now">Shop Now</a>
-					</div>
-					<div class="col-md-6 col-2">
-						<a href="single.html"><img src="images/pi.jpg" class="img-responsive" alt="">
-						</a>
-					</div>
-					<div class="clearfix"> </div>
-				</div>
+			<div class="banner-super" style="">
+				<h1>Lưu giữ thêm khoảnh khắc với bộ nhớ khổng lồ của Samsung Galaxy M52 </h1>
+				<div>Với bộ nhớ trong 128GB và hỗ trợ thẻ nhớ microSD lên đến 1TB, bạn sẽ có nhiều dung lượng để lưu trữ những khoảnh khắc đáng giá từ video và ảnh chất lượng cao</div>
+			</div>
+			<div class="col-md-6 col-m1 content-head-sub" data-wow-delay=".1s">
+
 			</div>
 
 			<div class="col-md-6 col-m2 animated wow fadeInRight" data-wow-delay=".1s">
@@ -332,31 +314,7 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 				<!-- //requried-jsfiles-for owl -->
 				<!-- start content_slider -->
 				<div id="owl-demo" class="owl-carousel">
-					<div class="item">
 
-						<a href="single.html"><img class="img-responsive" src="images/bb.png" alt="" /></a>
-						<a href="single.html" class="shop-2">Shop Now</a>
-
-					</div>
-					<div class="item">
-
-						<a href="single.html"><img class="img-responsive" src="images/bb1.png" alt="" /></a>
-						<a href="single.html" class="shop-2">Shop Now</a>
-
-					</div>
-
-					<div class="item">
-
-						<a href="single.html"><img class="img-responsive" src="images/bb.png" alt="" /> </a>
-						<a href="single.html" class="shop-2">Shop Now</a>
-
-					</div>
-					<div class="item">
-
-						<a href="single.html"><img class="img-responsive" src="images/bb1.png" alt="" /></a>
-						<a href="single.html" class="shop-2">Shop Now</a>
-
-					</div>
 				</div>
 			</div>
 			<div class="clearfix"></div>
@@ -366,31 +324,30 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!---->
 
 	<div class="content-top">
-		<div class="col-md-5 col-md1 animated wow fadeInLeft" data-wow-delay=".1s">
-			<div class="col-3">
-				<a href="single.html"><img src="images/pi1.jpg" class="img-responsive " alt="">
-					<div class="col-pic">
-						<h5> Women's Wear</h5>
-						<p>At vero eos et accusamus et</p>
-					</div>
-				</a>
-			</div>
-
+		<div class="col-md-5 col-md1 " style="height: 100%">
+			<img th:src="@{/images/phone_image/830-300-830x300-21.png}" class="" alt="" style="height: 100%; width: 100%">
+			<img th:src="@{/images/phone_image/Aseri-830-300-830x300.png}" class="" alt="" style="height: 100%; width: 100%">
 		</div>
-		<div class="col-md-7 col-md2 animated wow fadeInRight" data-wow-delay=".1s">
-			<div class="col-sm-4 item-grid simpleCart_shelfItem" th:each="mostQuantityPhone: ${mostQuantityPhones}">
+		<div class="col-md-7 animated wow fadeInRight" data-wow-delay=".1s">
+			<h1 style="text-align: center;  margin:25px 0px">Newest Phone</h1>
+			<div class="col-sm-4 item-grid simpleCart_shelfItem phone-item" th:each="mostQuantityPhone: ${mostQuantityPhones}">
 				<div class="grid-pro">
+
 					<div class=" grid-product ">
-						<figure>
-							<a href="#">
-								<div class="grid-img">
-									<img th:src="${mostQuantityPhone.image}" class="img-responsive" alt="">
-								</div>
-								<div class="grid-img">
-									<img th:src="${mostQuantityPhone.image}" class="img-responsive" alt="">
-								</div>
-							</a>
-						</figure>
+
+							<figure>
+
+								<a href="#">
+									<div class="grid-img">
+										<img th:src="${mostQuantityPhone.image}" class="img-responsive" alt="" style="height: 100%">
+									</div>
+									<div class="grid-img">
+										<img th:src="${mostQuantityPhone.image}" class="img-responsive" alt="">
+									</div>
+								</a>
+							</figure>
+
+
 					</div>
 					<div class="women">
 						<a href="#"><img src="images/ll.png" alt=""></a>
@@ -410,8 +367,9 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 	<!----->
 	<!---->
 	<div class="content-top">
-		<div class="col-md-7 col-md2 animated wow fadeInLeft" data-wow-delay=".1s">
-			<div class="col-sm-4 item-grid simpleCart_shelfItem" th:each="newestPhone: ${newestPhones}">
+		<div class="col-md-7 animated wow fadeInLeft" data-wow-delay=".1s">
+			<h1 style="text-align: center; margin:25px 0px">Newest Phone</h1>
+			<div class="col-sm-4 item-grid simpleCart_shelfItem phone-item" th:each="newestPhone: ${newestPhones}">
 				<div class="grid-pro">
 					<div class=" grid-product ">
 						<figure>
@@ -436,14 +394,8 @@ Smartphone Compatible web template, free webdesigns for Nokia, Samsung, LG, Sony
 			<div class="clearfix"></div>
 		</div>
 		<div class="col-md-5 col-md1 animated wow fadeInRight" data-wow-delay=".1s">
-			<div class="col-3">
-				<a href="single.html"><img src="images/pi2.jpg" class="img-responsive " alt="">
-					<div class="col-pic">
-						<h5> Men's Wear</h5>
-						<p>At vero eos et accusamus et</p>
-					</div>
-				</a>
-			</div>
+			<img th:src="@{/images/phone_image/renno6-seri-830-300-830x300-3.png}" class="" alt="" style="height: 100%; width: 100%">
+			<img th:src="@{/images/phone_image/830-300-830x300-24.png}" class="" alt="" style="height: 100%; width: 100%">
 
 		</div>
 		<div class="clearfix"></div>
